fix(benchmarks): restore broken benchmark dashboard visuals
- Pin Chart.js to v4.5.1 and update SRI integrity hash to fix blocked
  script loading in all 3 HTML templates
- Forward benchmark.history.dir system property through exec-maven-plugin
  so micro benchmark trend data is available in CI
- Standardize all number formatting to Locale.US instead of Locale.GERMAN
  or JVM-default locale to prevent corrupt history data with comma
  decimal separators
- Update test expectations to match Locale.US output

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>